switch to unicode escape codes instead of ligatures

--- a/themes/commentblocks/layouts/partials/social.html
+++ b/themes/commentblocks/layouts/partials/social.html
@@ -1,8 +1,6 @@
-{{ $iconStyle := .Site.Params.socialIconStyle }}
 <div id="social">
-    {{ range $key, $val := .Site.Social }}
-    <a class="symbol" href="{{$val}}">
-        {{ $iconStyle }}{{ if eq $key "twitter" }}twitterbird{{ else }}{{ $key }}{{ end }}
-    </a>
-    {{ end }}
+    <a class="symbol" href="https://www.github.com/Tenchi2xh">&#xe437;</a>
+    <a class="symbol" href="https://www.twitter.com/2xhTenchi">&#xe486;</a>
+    <a class="symbol" href="http://codegolf.stackexchange.com/users/49508/tenchi2xh">&#xe481;</a>
+    <a class="symbol" href="https://www.youtube.com/user/2xhTenchi">&#xe499;</a>
 </div>
