--- a/css/style.css
+++ b/css/style.css
@@ -135,20 +135,14 @@ nav.main-nav {
     right: 0;
     width: 100%;
     z-index: 100;
+    box-shadow: inset 0 -1px 0 #eee;
 }
 
 nav.main-nav a {
     padding: 8px 12px;
-    color: #5badf0;
     font-size: 16px;
     line-height: 1.35;
-    border-radius: 3px;
-}
-
-nav.main-nav a.cta {
-    background: #5badf0;
-    color: #fff;
-    margin-left: 12px;
+    border-radius: 4px;
 }
 
 #wrapper {
@@ -724,7 +718,8 @@ p a {
     padding-right: 3px;
 }
 
-p a:hover {
+p a:hover,
+nav.main-nav a:hover {
     background-color: #5694f1;
     color: white;
 }
