--- a/themes/commentblocks/static/css/style.css
+++ b/themes/commentblocks/static/css/style.css
@@ -313,7 +313,7 @@ span.code { font-family: "Roboto Mono"; background-color:#111111; font-size:14px
     line-height: 1.5em !important;
     font-weight: 400;
     color: #d0d4d7;
-    overflow-x: scroll;
+    overflow-x: auto;
     margin-bottom: 0;
 }
 
