--- a/css/style.css
+++ b/css/style.css
@@ -126,20 +126,20 @@ h2 {
 }
 
 nav.main-nav {
-    padding: 20px;
+    padding: 10px;
     background: #fff;
     background: rgba(255,255,255,.90);
     margin: 0 auto;
-    position: fixed;
-    top: 0;
-    right: 0;
+    display: inline-block;;
     width: 100%;
     z-index: 100;
     box-shadow: inset 0 -1px 0 #eee;
 }
 
 nav.main-nav a {
-    padding: 8px 12px;
+    display: inline-block;
+    margin: 0 -3px;
+    padding: 6px;
     font-size: 16px;
     line-height: 1.35;
     border-radius: 4px;
