--- a/themes/commentblocks/layouts/partials/js.html
+++ b/themes/commentblocks/layouts/partials/js.html
@@ -1,3 +1,5 @@
 <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+<script src="{{ .Site.BaseURL }}js/jquery.particleground.js"></script>
+<script src="{{ .Site.BaseURL }}js/zodiac.js"></script>
 <script src="{{ .Site.BaseURL }}js/main.js"></script>
 {{ template "_internal/google_analytics.html" . }}
