--- a/css/style.css
+++ b/css/style.css
@@ -65,7 +65,6 @@ body {
     color: #666;
     -webkit-font-smoothing: antialiased;
     text-rendering: optimizeLegibility;
-    z-index: -200;
 }
 
 h1 {
@@ -292,7 +291,7 @@ p.small {
 blockquote {
     padding-left: 15px;
     border-left: 3px solid #eee;
-    background-color: #fafafa;
+    background-color: rgba(225, 225, 225, 0.3);
     color: #999;
 }
 
@@ -712,7 +711,8 @@ h2.month {
     .post h2 { font-size:20px; }
 }
 
-p a {
+p a,
+li a {
     border-radius: 4px;
     padding-bottom: 1px;
     margin-left: -3px;
@@ -722,7 +722,8 @@ p a {
 }
 
 p a:hover,
-nav.main-nav a:hover {
+nav.main-nav a:hover,
+li a:hover {
     background-color: #5694f1;
     color: white;
 }
@@ -731,4 +732,13 @@ nav.main-nav a:hover {
     text-align: left;
     white-space: pre;
     display: inline-block;
+}
+
+.particleground {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -50;
 }
