--- a/css/style.css
+++ b/css/style.css
@@ -367,7 +367,7 @@ span.code { font-family: "Roboto Mono"; background-color:#111111; font-size:14px
     color: #4a4a4a;
 }
 
-p code, table code {
+p code, table code, li code {
     background-color: #f0f0f0;
     padding-bottom: 1px;
     margin-left: -3px;
@@ -741,4 +741,11 @@ article li a:hover {
     width: 100%;
     height: 100%;
     z-index: -50;
+}
+
+.inline-image {
+    height: 1.5em;
+    margin-bottom: -0.4em;
+    width: auto;
+    border-radius: 3px;
 }
