--- a/themes/commentblocks/static/css/style.css
+++ b/themes/commentblocks/static/css/style.css
@@ -46,8 +46,16 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
 
 
 /* Spacing */
-.post h1, h3, h4, h5, p, ul, .post-body ul, #post-list li, pre {
+.post h1, h3, h4, h5, p, section > ul, section > ol, .post-body ul, #post-list li, pre {
     margin-bottom: 20px;
+}
+
+.post ul {
+    padding-left: 1.4em;
+}
+
+.post ol {
+    list-style-type: lower-roman;
 }
 
 .post-title {
@@ -190,12 +198,13 @@ a,
     transition: color 0.15s ease, background-color 0.15s ease;
 }
 
-li  { list-style-type:circle; list-style-position:inside; }
+ul li  { list-style-type:circle; }
+li { list-style-position:inside; }
 
 /* Line Height */
 #post-body, p { line-height:1.7; }
 
-b, strong { font-weight: 700;
+b, strong { font-weight: 400;
   color: #1E2025; }
 em, i { font-style: italic; }
 
@@ -262,7 +271,7 @@ em, i { font-style: italic; }
 #post-list h2 {
     font: normal 17px/1.5em "Roboto Mono";
     color: #aaa;
-    max-width: 400px;
+    /*max-width: 400px;*/
     margin-top: 2px;
 }
 
@@ -315,9 +324,9 @@ span.code { font-family: "Roboto Mono"; background-color:#111111; font-size:14px
 .highlighttable pre {
     font-family: "Roboto Mono";
     padding:20px;
-    background: #202020;
+    background: #1c1c1c;
     font-size: 14px;
-    line-height: 1.5em !important;
+    line-height: 1.25em !important;
     font-weight: 400;
     color: #d0d4d7;
     overflow-x: auto;
@@ -326,9 +335,9 @@ span.code { font-family: "Roboto Mono"; background-color:#111111; font-size:14px
 
 .highlighttable {
     position: relative;
-    -webkit-filter: sepia(100%) hue-rotate(175deg) saturate(170%);
-    -moz-filter: sepia(100%) hue-rotate(175deg) saturate(170%);
-    filter: sepia(100%) hue-rotate(175deg) saturate(170%);
+    -webkit-filter: saturate(70%) !important;
+    -moz-filter: saturate(70%) !important;
+    filter: saturate(70%) !important;
 }
 
 .highlighttable::before {
@@ -340,8 +349,8 @@ span.code { font-family: "Roboto Mono"; background-color:#111111; font-size:14px
     -webkit-transform: translateX(-50%);
     -moz-transform: translateX(-50%);
     transform: translateX(-50%);
-    background-color: #202020;
-    z-index: -100;
+    background-color: #1c1c1c;
+    z-index: -1;
 }
 
 .highlighttable tr td {
@@ -757,7 +766,7 @@ article li a:hover {
     border-radius: 3px;
 }
 
-.footnote-ref {
+.footnote-ref, .footnote-return {
     vertical-align: super;
     font-size: 0.83em;
 }
