fix console snapshot horizontal scrolling

--- a/layouts/shortcodes/term.html
+++ b/layouts/shortcodes/term.html
@@ -1,5 +1,14 @@
 <table class="highlighttable">
-    <td>
-        <pre>{{ .Inner }}</pre>
-    </td>
+    <tr>
+        <td>
+            <div class="linenodiv" style="width: 0">
+                <pre>{{ .Inner }}</pre>
+            </div>            
+        </td>
+        <td class="code">
+            <div class="highlight">
+                <pre>{{ .Inner }}</pre>
+            </div>
+        </td>
+    <tr>
 </table>
