--- a/themes/commentblocks/layouts/partials/head.html
+++ b/themes/commentblocks/layouts/partials/head.html
@@ -3,7 +3,8 @@
 	<head>
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1.0" />
+		<meta name="apple-mobile-web-app-capable" content="yes" />
 		<meta name="author" content="{{ with .Site.Params.name }}{{ . }}{{ end }}">
 		<meta name="description" content="{{ with .Site.Params.description }}{{ . }}{{ end }}">
 		{{ .Hugo.Generator }}
