--- a/themes/commentblocks/layouts/partials/head.html
+++ b/themes/commentblocks/layouts/partials/head.html
@@ -9,7 +9,8 @@
 		{{ .Hugo.Generator }}
 		<title>/* {{ .Site.Title }}: {{ upper .Title }} */</title>
 		<link rel="shortcut icon" href="{{ .Site.BaseURL }}images/favicon.png">
-		<link href='https://fonts.googleapis.com/css?family=Roboto+Mono:400,300,300italic,400italic' rel='stylesheet' type='text/css'>
+		<!-- <link href='https://fonts.googleapis.com/css?family=Roboto+Mono:400,300,300italic,400italic' rel='stylesheet' type='text/css'> -->
+		<link rel="stylesheet" href="{{ .Site.BaseURL }}fonts/firacode.css">
 		<link rel="stylesheet" href="{{ .Site.BaseURL }}css/style.css">
 		<link rel="stylesheet" href="{{ .Site.BaseURL }}css/monosocialiconsfont.css">
 		{{ if .Site.Params.enableRSS }}
