--- a/themes/commentblocks/static/css/style.css
+++ b/themes/commentblocks/static/css/style.css
@@ -67,7 +67,7 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
 }
 
 body {
-    font:16px/1 "Roboto Mono";
+    font:16px/1 "Fira Code";
     font-weight: 300;
     background-color: #fcfcfc;
     color: #666;
@@ -83,7 +83,7 @@ h1 {
 }
 
 h2 {
-    font: italic 19px/1.3em "Roboto Mono";
+    font: italic 19px/1.3em "Fira Code";
     color: #bbb;
 }
 
@@ -122,7 +122,7 @@ h2 {
       color: #aaa;
       margin-top: 10px;
       font-style: normal;
-      font-family: "Roboto Mono";
+      font-family: "Fira Code";
 }
 
 .main-nav .header-title {
@@ -219,7 +219,7 @@ em, i { font-style: italic; }
 
 .description {
     float: right;
-    font: italic 14px/1.4em "Roboto Mono";
+    font: italic 14px/1.4em "Fira Code";
     color: #aaa;
 }
 
@@ -233,7 +233,7 @@ em, i { font-style: italic; }
 }
 
 .home h2 {
-    font: italic 19px/1.3em "Roboto Mono";
+    font: italic 19px/1.3em "Fira Code";
     color: #bbb;
 }
 
@@ -245,20 +245,20 @@ em, i { font-style: italic; }
 .post h1 {
     margin-bottom: 20px;
     color: #222;
-    font: 300 32px/1.4em "Roboto Mono";
+    font: 300 32px/1.4em "Fira Code";
 }
 
 .post h2 {
     margin-top: 40px;
     margin-bottom: 20px;
-      font: 300 24px/1.5 "Roboto Mono";
+      font: 300 24px/1.5 "Fira Code";
       color: #111;
 }
 
 
 .post h2.headline {
     /*font: italic 22px/1.3em Georgia,serif;*/
-    font: normal 13px/1.5em "Roboto Mono";
+    font: normal 13px/1.5em "Fira Code";
     margin: -5px 0 40px 0;
     color: #b2b9be;
       font-size: 13px;
@@ -269,7 +269,7 @@ em, i { font-style: italic; }
 }
 
 #post-list h2 {
-    font: normal 17px/1.5em "Roboto Mono";
+    font: normal 17px/1.5em "Fira Code";
     color: #aaa;
     /*max-width: 400px;*/
     margin-top: 2px;
@@ -319,10 +319,10 @@ hr {
     background: #eee;
 }
 
-span.code { font-family: "Roboto Mono"; background-color:#111111; font-size:14px; }
+span.code { font-family: "Fira Code"; background-color:#111111; font-size:14px; }
 
 .highlighttable pre {
-    font-family: "Roboto Mono";
+    font-family: "Fira Code";
     padding:20px;
     background: #1c1c1c;
     font-size: 14px;
@@ -469,14 +469,14 @@ Post List
 #post-list a {
     color: #333;
     display: block;
-    font: bold 19px/1.7 "Roboto Mono";
+    font: bold 19px/1.7 "Fira Code";
 }
 
 #post-list .dates {
     float: right;
     position: relative;
     top: 1px;
-    font: 300 17px/1.8 "Roboto Mono";
+    font: 300 17px/1.8 "Fira Code";
     color: #bbb;
 }
 
@@ -626,7 +626,7 @@ h1.archive {
 
 h2.month {
     width: 100%;
-    font: bold 13px/1 "Roboto Mono";
+    font: bold 13px/1 "Fira Code";
     text-transform: uppercase;
     margin-top: 40px;
     margin-bottom: 10px;
@@ -640,7 +640,7 @@ h2.month {
 
 #archive-list a {
     display: block;
-    font: bold 17px/1.7 "Roboto Mono";
+    font: bold 17px/1.7 "Fira Code";
     color: #333;
 }
 
@@ -648,7 +648,7 @@ h2.month {
     float: right;
     position: relative;
     top: 1px;
-    font: 300 17px/1.7 "Roboto Mono";
+    font: 300 17px/1.7 "Fira Code";
     color: #bbb;
 }
 
@@ -667,12 +667,12 @@ h2.month {
 
 #post-list.archive.readmore h3{
 
-      font: 400 20px "Roboto Mono";
+      font: 400 20px "Fira Code";
       margin-bottom: 30px;
 }
 
 #post-list.archive.readmore a{
-    font: 400 16px/1.6 "Roboto Mono";
+    font: 400 16px/1.6 "Fira Code";
     color: #5694f1;
 }
 
@@ -681,7 +681,7 @@ h2.month {
 }
 
 #post-list.archive.readmore .dates{
-    font: 300 16px/1.6 "Roboto Mono";
+    font: 300 16px/1.6 "Fira Code";
 }
 #sharing a {
   background: #5694f1;
