--- a/themes/commentblocks/layouts/partials/footer.html
+++ b/themes/commentblocks/layouts/partials/footer.html
@@ -4,7 +4,7 @@
     {{ with .Site.Params.copyright }}
         {{ . | markdownify }}
     {{ else }}
-        © Copyright {{.Now.Format "2006"}} {{ .Site.Params.name }}
+        © Copyright {{ time.Format "2006" (time.Now) }} {{ .Site.Params.name }}
     {{ end }}
     </p>
 </footer>
