--- a/themes/commentblocks/layouts/partials/head.html
+++ b/themes/commentblocks/layouts/partials/head.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta name="author" content="{{ with .Site.Params.name }}{{ . }}{{ end }}">
 		<meta name="description" content="{{ with .Site.Params.description }}{{ . }}{{ end }}">
-		{{ .Hugo.Generator }}
+		{{ hugo.Generator }}
 		<title>/* {{ .Site.Title }}: {{ upper .Title }} */</title>
 		<link rel="shortcut icon" href="{{ .Site.BaseURL }}images/favicon.png">
 		<link href='https://fonts.googleapis.com/css?family=Roboto+Mono:400,300,300italic,400italic' rel='stylesheet' type='text/css'>
